fix: change from deprecated URL.URL